# ruch_oporu

./: .gitignore  Cargo.toml  LICENSE  granaorientacje_dev.session.sql  map.html  postgres.session.sql  todo  trunk.toml
backend/: .commands  .env  Cargo.toml  ankieta.py  database.py  main.py  pyproject.toml
backend/src/: hello.rs  main.rs  survey.rs  upload_file.rs  users.rs
backend/src/handlers/: mod.rs
backend/src/old/: hello.rs  old_main.rs  survey.rs
frontend/: Cargo.toml  codia.html  deploy.sh  index.html
frontend/docs/: contact_page-c9552c604e9a62bd.css  frontend-59baf96f9a50255.js  frontend-59baf96f9a50255_bg.wasm  index.html  qa_section-2da6047077ed0688.css
frontend/src/: about_us.rs  ankieta.rs  codia.css  coming_outs.rs  contact.rs  copilot.css  description.rs  env.rs  faq.rs  form.rs  gpt.css  hello.rs  home.rs  home_gpt.rs  landing_page.rs  lib.rs  main.css  main.rs  mod.rs  navigator.rs  not_found.rs  rodo.rs  rules.rs  survey-styles.css  survey.rs  survey_counter.rs  survey_file_upload.rs  surveys_viewer.rs  test.html  users.rs
frontend/src/about_us_components/: about_us_text_section.rs  mod.rs  text_section.css  text_section.rs
frontend/src/coming_outs_components/: box_section.css  box_section.rs  mod.rs  text_section.rs
frontend/src/components/: coming_outs_page.rs  floating_box.rs  footer.rs  form_box.rs  form_page.rs  history_box.rs  landing_page.rs  mod.rs  navbar.rs  routes.rs  story_box.rs  team_story_box.rs
frontend/src/contact_components/: contact_page.css  contact_page.rs  mod.rs
frontend/src/exhibition_components/: exhibition_page.css  exhibition_page.rs
frontend/src/faq_components/: faq_text_section.rs  qa_section.rs
frontend/src/form_components/: expandable_question.css  expandable_question.rs  form_section.css  form_section.rs  mod.rs  questions_section.rs  status_selector.css
frontend/src/landing_page_components/: box_section.css  box_section.rs  hero.css  hero.rs  mod.rs  nav_bar.css  nav_bar.rs  patrons.css  submissions_count.rs
frontend/src/movie_components/: movie_page.rs
frontend/src/navigation_bar_components/: routes.rs
frontend/src/other_organizations_components/: map.py  mod.rs
frontend/src/pages/: about_us_page.rs  coming_outs_page.rs  contact_page.rs  exhibition_page.rs  faq_page.rs  form_page.rs  mod.rs  (+7 more)
(+92 files in other folders)
