[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
gloo-net = "0.6.0"
jsonwebtoken = "9.3.0"
log = "0.4.25"
mysql = "26.0.0"
sanitize-filename = "0.6.0"
serde = "1.0.216"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [ "postgres", "runtime-tokio", "chrono" ] }
uuid = { version="1.13.1", features = [ "v4" ] }
