[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version="0.21.0", features=["csr"]}
wasm-bindgen = "0.2.99"
serde = {version="1.0.216", features=["derive"]}
serde_json = "1.0.133"
reqwest = {version="0.12.9", features=["json"]}
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
