[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version="0.21.0", features=["csr"]}
wasm-bindgen = "0.2.99"
serde = {version="1.0.216", features=["derive"]}
serde_json = "1.0.133"
reqwest = {version="0.12.9", features=["json", "multipart", "stream"]}
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
gloo = "0.11.0"
gloo-console = "0.3.0"
yew-router = "0.18.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
js-sys = "0.3.76"
