[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version="0.21.0", features=["csr"]}
wasm-bindgen = {version="0.2.99", features=["serde"]}
serde = {version="1.0.216", features=["derive"]}
serde_json = "1.0.133"
reqwest = {version="0.12.9", features=["json", "multipart", "stream"]}
wasm-bindgen-futures = "0.4.49"
web-sys = {version="0.3.76", features=["IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "DomTokenList", "Element", "HtmlImageElement", "DomStringMap"]}
gloo = "0.11.0"
gloo-console = "0.3.0"
yew-router = "0.18.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
js-sys = "0.3.76"
base64 = "0.22.1"
log = "0.4.25"
console_log = "1.0.0"
gloo-utils = "0.2.0"
